# distraction-tracker

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TODO  dev.docker-compose.yml  docker-compose.yml  env.example  sqlx-data.json  staging.docker-compose.yml  stg.docker-compose.yml
.sqlx/: query-07ccf59f55cc682d525d7fd98e4edc5c9d6de8442602f88d4517787e56576b4f.json  query-51b451fdb029bf1f193fe8de89b971706414f0027be25b454863f822a5fe01b1.json  query-8225b1ebe5e4df8df7aecb0e8950de7050b75c76690178d2e060e7072eb0efc2.json  query-e3fa5984d8587aaab95c7d5ff4436439b2c7d24e451208d611b70adfd58d5656.json  query-ede19f2c5c1459e6adaf36e1a69d744d33c6f0acf716eb66410c1431c20a523d.json  query-fe02e16c894d11ca68024136373395cf3fad90b63d10955c6ecbca5fb6f60ee9.json
migrations/: 20230506232606_users.sql  20230506232618_user_connections.sql  20230513233212_user_unique.sql  20230525082311_change_to_unsigned.sql
src/: actix-main.rs  db.rs  main.rs  models.rs  routes.rs
src/commands/: add_user.rs  daily.rs  get_user.rs  increment.rs  mod.rs  user_connections.rs  users.rs  weekly.rs
src/routes/: headers.rs  helpers.rs  homepage.rs  iphistory.rs  mod.rs
src/static/: index.html
static/templates/: index.html
templates/: history.html  index.html
