[package]
name = "distraction-tracker"
version = "0.1.0"
edition = "2021"
authors = ["Drew Gotshalk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "mysql"] }
serde_json = "1.0.94"
serde = { version = "1.0.155", features = ["derive"] }
axum = "0.6.11"
tokio = { version="1.26.0", features=["macros","rt-multi-thread"] }
askama = "0.12.0"
tower-http = { version="0.4.0", features=["full"] }
