[package]
name = "distraction-tracker"
version = "0.1.0"
edition = "2021"
authors = ["Drew Gotshalk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features =["with-axum"] }
askama_axum = "0.3.0"
axum = "0.6.11"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "mysql"] }
tokio = { version = "1.26.0", features = ["macros","rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["full"] }
