[package]
name = "distraction-tracker"
version = "0.1.0"
edition = "2021"
authors = ["Drew Gotshalk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"

askama_axum = "0.3.0"
axum = { version = "0.6.11", features = [ "headers", "tokio" ] }
axum-client-ip = "0.4.0"
chrono = "0.4.24"
chrono-tz = "0.8.2"
dotenv = "0.15.0"
serde_json = "1.0.94"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "mysql", "macros", "migrate", "chrono", "offline" ] }
tokio = { version = "1.26.0", features = [ "macros", "rt-multi-thread" ] }
tower-http = { version = "0.4.0", features = [ "full" ] }
